--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Star Citizen Ship Chronology</title>
+    <base href="/sc-ship-chronology/">
 </head>
 
 <body>
